src/dialog/snapshots/tvision__dialog__msgbox__tests__snapshot_confirm_yes_no_cancel.snap
---
source: src/dialog/msgbox.rs
expression: "render_dialog(&mut d, 40, 9)"
---
size: 40x9
cursor: hidden
text:
|┌────────────── Confirm ───────────────┐|
|│                                      │|
|│  Are you sure?                       │|
|│                                      │|
|│                                      │|
|│                                      │|
|│     Yes   ▄      No   ▄    Cancel ▄  │|
|│    ▀▀▀▀▀▀▀▀    ▀▀▀▀▀▀▀▀    ▀▀▀▀▀▀▀▀  │|
|└──────────────────────────────────────┘|
attr:
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaa|
|aaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaa|
|aaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaa|
|aaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaa|
|aaacddedddddcaacdddeddddcaacdeddddddcaaa|
|aaaccccccccccaaccccccccccaaccccccccccaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=BIOS(7) bg=BIOS(1)
  b fg=BIOS(0) bg=BIOS(7)
  c fg=BIOS(8) bg=BIOS(0)
  d fg=BIOS(0) bg=BIOS(2)
  e fg=BIOS(14) bg=BIOS(2)
