src/dialog/snapshots/tvision__dialog__msgbox__tests__snapshot_error_ok.snap
---
source: src/dialog/msgbox.rs
expression: "render_dialog(&mut d, 40, 9)"
---
size: 40x9
cursor: hidden
text:
|┌─────────────── Error ────────────────┐|
|│                                      │|
|│  An error occurred.                  │|
|│                                      │|
|│                                      │|
|│                                      │|
|│                  OK   ▄              │|
|│                ▀▀▀▀▀▀▀▀              │|
|└──────────────────────────────────────┘|
attr:
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaabbbbcbbbaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=BIOS(0) bg=BIOS(7)
  b fg=BIOS(0) bg=BIOS(2)
  c fg=BIOS(14) bg=BIOS(2)
