src/dialog/snapshots/tvision__dialog__msgbox__tests__snapshot_input_box.snap
---
source: src/dialog/msgbox.rs
assertion_line: 395
expression: "render_dialog(&mut d, 60, 8)"
---
size: 60x8
cursor: hidden
text:
|┌───────────────────────── Title ──────────────────────────┐|
|│                                                          │|
|│  Name                                                    │|
|│                                                          │|
|│                                       OK   ▄    Cancel ▄ │|
|│                                     ▀▀▀▀▀▀▀▀    ▀▀▀▀▀▀▀▀ │|
|│                                                          │|
|└──────────────────────────────────────────────────────────┘|
attr:
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aabbbbbacccccccccccccccccccccccccccccccccccccccccccccccccaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddedddbaabdeddddddbaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbaabbbbbbbbbbaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=BIOS(7) bg=BIOS(1)
  b fg=BIOS(0) bg=BIOS(7)
  c fg=BIOS(0) bg=BIOS(3)
  d fg=BIOS(0) bg=BIOS(2)
  e fg=BIOS(14) bg=BIOS(2)
